aggiornamento versioning da v1 a v2 e altre piccole revisioni file test
