# backend/src/app.js
@@ -10,24 +10,22 @@ const routesStatistiche = require('./routes/routesStatistiche');
 const routesBollette = require('./routes/routesBollette');
 
 const app = express();
-
-// Middleware globale
-app.use(express.json()); // Permette di leggere il body JSON nelle richieste
+app.use(express.json()); 
 
 // Routes
-app.use('/api/v1/annunci', annunciRoutes);
-app.use('/api/v1/users', userRoutes);
-app.use('/api/v1/appartamenti', routesAppartamenti);
-app.use('/api/v1/gestione-interna', routesGestioneInterna);
-app.use('/api/v1/statistiche', routesStatistiche);
-app.use('/api/v1/bollette', routesBollette);
+app.use('/api/v2/annunci', annunciRoutes);
+app.use('/api/v2/users', userRoutes);
+app.use('/api/v2/appartamenti', routesAppartamenti);
+app.use('/api/v2/gestione-interna', routesGestioneInterna);
+app.use('/api/v2/statistiche', routesStatistiche);
+app.use('/api/v2/bollette', routesBollette);
 
-// Route di "health": check utile per verificare che il server sia ok
+// Route di "health": check utile per verificare che il server funzioni
 app.get('/health', (req, res) => {
   res.status(200).json({ status: 'ok', message: 'Server funzionante' });
 });
 
-// Gestione errori
+// Middleware di gestione errori
 app.use(errorHandler);
 
 module.exports = app;
